--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/financeiro
+
+spring.datasource.username=root
+spring.datasource.password=root123
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
