--- a/Financeiro/src/main/resources/application.properties
+++ b/Financeiro/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/financeiro
-
+spring.datasource.url=jdbc:mysql://localhost:3306/financeiro?userSSL=false
 spring.datasource.username=root
-spring.datasource.password=root123
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+spring.datasource.password=Teste@123
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
