Corrigido nome do banco H2 e limpado import sql.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:disciplinas
+spring.datasource.url=jdbc:h2:mem:disciplina
 spring.datasource.username=sa
 spring.datasource.password=
 
