--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:h2:mem:disciplina
 spring.datasource.username=sa
 spring.datasource.password=
-
+#Teste
 #spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
