update time zone

--- a/Financeiro/src/main/resources/application.properties
+++ b/Financeiro/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
+
+time.zone=America/Sao_Paulo
+time.format=yyyy-MM-dd'T'HH:mm:ss'Z'
